Added function to set the characteristic and type (mesh) to the NPC

--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -736,6 +736,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 StaticMesh=StaticMesh.Collision.Collision,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1202,6 +1203,62 @@ BP_FirstPersonCharacter_C.Pawn=True
 BP_FirstPersonCharacter_C.Replication=True
 BP_FirstPersonCharacter_C.Input=True
 BP_FirstPersonCharacter_C.Actor=True
+BP_NPC_C.Default=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+StaticMeshComponent.Mobile=True
+Eye_C.Tick=True
+Eye_C.Rendering=True
+Eye_C.Replication=True
+Eye_C.Input=True
+Eye_C.Actor=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+BP_NPC_C.Animation=True
+BP_NPC_C.Mesh=True
+BP_NPC_C.Physics=True
+BP_NPC_C.Clothing=True
+BP_NPC_C.Collision=True
+BP_NPC_C.ClothingSimulation=True
+BP_NPC_C.Lighting=True
+BP_NPC_C.Tags=True
+BP_NPC_C.Activation=True
+BP_NPC_C.Cooking=True
+BP_NPC_C.Character Movement: Jumping / Falling=True
+BP_NPC_C.Character Movement (General Settings)=True
+BP_NPC_C.Character Movement: Walking=True
+BP_NPC_C.Character Movement: Swimming=True
+BP_NPC_C.Character Movement: Flying=True
+BP_NPC_C.Character Movement: Custom Movement=True
+BP_NPC_C.Character Movement (Rotation Settings)=True
+BP_NPC_C.Character Movement: Physics Interaction=True
+BP_NPC_C.Character Movement (Networking)=True
+BP_NPC_C.Character Movement=True
+BP_NPC_C.Character Movement: Avoidance=True
+BP_NPC_C.Character Movement: NavMesh Movement=True
+BP_NPC_C.RootMotion=True
+BP_NPC_C.NavMovement=True
+BP_NPC_C.Velocity=True
+BP_NPC_C.PlanarMovement=True
+BP_NPC_C.MovementComponent=True
+BP_NPC_C.Shape=True
+BP_NPC_C.Navigation=True
+BP_NPC_C.Character=True
+BP_NPC_C.Camera=True
+BP_NPC_C.Pawn=True
+UserDefinedEnum.Enumerators=True
+K2Node_SwitchInteger.PinOptions=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1209,6 +1266,10 @@ BP_FirstPersonCharacter_C.Actor=True
 /Game/Dev/HUD/GameHUD.GameHUD=0
 /Game/UI/HUD/HUDWidget.HUDWidget=0
 /Game/UI/HUD/BP_HUDWidget.BP_HUDWidget=0
+/Game/Characters/NPC/Mesh/SM_NPC_Body.SM_NPC_Body=0
+/Game/Characters/NPC/Enums/Characteristics.Characteristics=0
+/Game/Characters/NPC/Enums/CharacType.CharacType=0
+/Game/Characters/NPC/Blueprints/BP_NPC.BP_NPC=0
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1220,7 +1281,7 @@ VerticalBox="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Render Transform.RenderTransform\" "
@@ -1235,8 +1296,17 @@ Button="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 BP_HUDWidget_C="\"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object.BodySetup.Object.AggGeom\" "
-BP_NPC_C="\"Object.LeftEyeAddons\" "
+BP_NPC_C=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+HierarchicalInstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+InstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character=
+Pawn=
 
 [/Script/UnrealEd.ContentBrowserSettings]
 DisplayL10NFolder=False
@@ -1258,10 +1328,13 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [PlacementMode]
-RecentlyPlaced=/Game/Characters/NPC/BP_NPC.BP_NPC;
+RecentlyPlaced=/Game/Characters/NPC/Blueprints/BP_NPC.BP_NPC;
+RecentlyPlaced=/Game/Characters/NPC/Mesh/Eye.Eye;
+RecentlyPlaced=/Game/Characters/NPC/Mesh/SM_NPC_Body.SM_NPC_Body;
+RecentlyPlaced=/Game/Characters/Player/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter;
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1325,5 +1398,10 @@ bConvertSceneUnit=False
 
 [DetailCategoriesAdvanced]
 StaticMesh.Collision=True
+StaticMeshSocket.StaticMeshSocket=True
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 
