HUD Elements and animations

--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MAXPOUTWER
 LastExecutedLaunchName=MAXPOUTWER
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=38,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -91,11 +91,11 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-Jam2018.TimeStamp=2018.01.27-02.44.13
-Jam2018.LastCompileMethod=Runtime
+Jam2018.TimeStamp=2018.01.27-03.42.39
+Jam2018.LastCompileMethod=External
 PakFile.TimeStamp=2018.01.09-15.31.48
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.01.09-15.31.50
@@ -681,6 +681,7 @@ Panel=True
 Primitive=False
 Special Effects=False
 Uncategorized=False
+User Created=False
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
@@ -1202,6 +1203,138 @@ BP_FirstPersonCharacter_C.Pawn=True
 BP_FirstPersonCharacter_C.Replication=True
 BP_FirstPersonCharacter_C.Input=True
 BP_FirstPersonCharacter_C.Actor=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+SourceCodeAccessSettings.Accessor=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Audio=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.AI=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.RichCurveEditor=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SuperSearchSettings.General=True
+EditorTutorialSettings.Tutorials=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.Performance=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.Import=True
+VRModeSettings.General=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+OnlinePIESettings.Logins=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.Sequencer=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+LevelEditorPlaySettings.PlayOnDevice=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Options=True
+PersonaOptions.Skeleton Tree=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+FlipbookEditorSettings.Background=True
+SpriteEditorSettings.Background=True
+TileMapEditorSettings.Background=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+EditorLiveStreamingSettings.EditorLiveStreaming=True
+LogVisualizerSettings.VisualLogger=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+Widget.Behavior=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.ImportSettings=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+BP_FirstPersonCharacter_C.Default=True
+K2Node_MakeStruct.PinOptions=True
+K2Node_BreakStruct.PinOptions=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+BP_HUDWidget_C.Default=True
+CanvasPanel.Layout=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1209,6 +1342,18 @@ BP_FirstPersonCharacter_C.Actor=True
 /Game/Dev/HUD/GameHUD.GameHUD=0
 /Game/UI/HUD/HUDWidget.HUDWidget=0
 /Game/UI/HUD/BP_HUDWidget.BP_HUDWidget=0
+/Game/UI/Textures/ghost-03.ghost-03=1
+/Game/UI/Textures/T_Glasses.T_Glasses=1
+/Game/Characters/Player/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/UI/Textures/IncognitoNose.IncognitoNose=1
+/Game/UI/Textures/Neckerchief.Neckerchief=1
+/Game/UI/Textures/Necktie.Necktie=1
+/Game/UI/Textures/Square_Blue.Square_Blue=1
+/Game/UI/Textures/Mustache.Mustache=1
+/Game/UI/Textures/Bandana.Bandana=1
+/Game/UI/Textures/Circle_Orange.Circle_Orange=1
+/Game/UI/Textures/Hat.Hat=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1226,7 +1371,7 @@ Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-HUD_C="\"Object.Render Transform.RenderTransform\" "
+HUD_C=
 UserWidget="\"Object.Render Transform.RenderTransform\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 HUDWidget_C="\"Object.Render Transform.RenderTransform\" "
@@ -1237,6 +1382,8 @@ BP_HUDWidget_C="\"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object.BodySetup.Object.AggGeom\" "
 BP_NPC_C="\"Object.LeftEyeAddons\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [/Script/UnrealEd.ContentBrowserSettings]
 DisplayL10NFolder=False
@@ -1261,7 +1408,7 @@ LodDistance7=0.000000
 RecentlyPlaced=/Game/Characters/NPC/BP_NPC.BP_NPC;
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1325,5 +1472,14 @@ bConvertSceneUnit=False
 
 [DetailCategoriesAdvanced]
 StaticMesh.Collision=True
+TextBlock.Wrapping=True
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
 
 
