--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -51,7 +51,6 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MAXPOUTWER
 LastExecutedLaunchName=MAXPOUTWER
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -89,15 +88,17 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Characters
+ContentBrowserTab1.SelectedPaths=/Game/Maps/Meshes
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonCPP/Maps/TestMapMikelPathfinding
+LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-Jam2018.TimeStamp=2018.01.27-13.42.50
+Jam2018.TimeStamp=2018.01.27-15.10.39
 Jam2018.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.01.25-18.25.31
 PakFile.LastCompileMethod=External
@@ -629,15 +630,15 @@ BlueprintProfiler.TimeStamp=2018.01.25-18.25.16
 BlueprintProfiler.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2018.01.25-18.25.16
 BlueprintGraph.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2018.01.09-15.31.52
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.01.25-18.25.38
+StaticMeshEditor.LastCompileMethod=External
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1450.000 Y=890.000
+WindowSize=X=1480.000 Y=920.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -654,11 +655,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Mitx-PC/Game Jam 2018/Jam2018/Content/FirstPersonCPP/Maps
+UNR=../../../../../Mitx-PC/Game Jam 2018/Jam2018/Content/Maps
 BRUSH=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 FBX=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 FBXAnim=D:/Repos/GIT/Power Jammers/Jam2018/Content/
-GenericImport=D:/Repos/GIT/Power Jammers/Jam2018/Content/
+GenericImport=../../../../../Mitx-PC/Game Jam 2018/Jam2018/Content/Maps/Meshes/nopared.FBX
 GenericExport=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 GenericOpen=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 GenericSave=D:/Repos/GIT/Power Jammers/Jam2018/Content/
@@ -2098,6 +2099,86 @@ ArrowComponent.Cooking=True
 ArrowComponent.Events=True
 StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
+FbxImportUI.Animation=True
+FbxSceneImportOptions.ImportOptions=True
+FbxSceneImportOptions.Meshes=True
+FbxSceneImportOptions.Texture=True
+FbxSceneImportOptionsStaticMesh.StaticMesh=True
+FbxSceneImportOptionsSkeletalMesh.SkeletalMesh=True
+FbxSceneImportOptionsSkeletalMesh.Animation=True
+FbxScene_nopared_C.TransformCommon=True
+FbxScene_nopared_C.Rendering=True
+FbxScene_nopared_C.Input=True
+FbxScene_nopared_C.Actor=True
+FbxScene_nopared_C.Tick=True
+FbxScene_nopared_C.Replication=True
+BP_FirstPersonCharacter_C.TransformCommon=True
+BP_FirstPersonCharacter_C.Animation=True
+BP_FirstPersonCharacter_C.Mesh=True
+BP_FirstPersonCharacter_C.CameraSettings=True
+BP_FirstPersonCharacter_C.Color Grading=True
+BP_FirstPersonCharacter_C.Tonemapper=True
+BP_FirstPersonCharacter_C.Mobile Tonemapper=True
+BP_FirstPersonCharacter_C.Lens=True
+BP_FirstPersonCharacter_C.Rendering Features=True
+BP_FirstPersonCharacter_C.Physics=True
+BP_FirstPersonCharacter_C.Collision=True
+BP_FirstPersonCharacter_C.Tags=True
+BP_FirstPersonCharacter_C.Activation=True
+BP_FirstPersonCharacter_C.Lighting=True
+BP_FirstPersonCharacter_C.Rendering=True
+BP_FirstPersonCharacter_C.Cooking=True
+BP_FirstPersonCharacter_C.Camera=True
+BP_FirstPersonCharacter_C.MotionController=True
+BP_FirstPersonCharacter_C.Gameplay=True
+BP_FirstPersonCharacter_C.Clothing=True
+BP_FirstPersonCharacter_C.ClothingSimulation=True
+BP_FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_FirstPersonCharacter_C.Character Movement (General Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Walking=True
+BP_FirstPersonCharacter_C.Character Movement: Swimming=True
+BP_FirstPersonCharacter_C.Character Movement: Flying=True
+BP_FirstPersonCharacter_C.Character Movement: Custom Movement=True
+BP_FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_FirstPersonCharacter_C.Character Movement (Networking)=True
+BP_FirstPersonCharacter_C.Character Movement=True
+BP_FirstPersonCharacter_C.Character Movement: Avoidance=True
+BP_FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_FirstPersonCharacter_C.RootMotion=True
+BP_FirstPersonCharacter_C.NavMovement=True
+BP_FirstPersonCharacter_C.Velocity=True
+BP_FirstPersonCharacter_C.PlanarMovement=True
+BP_FirstPersonCharacter_C.MovementComponent=True
+BP_FirstPersonCharacter_C.Shape=True
+BP_FirstPersonCharacter_C.Navigation=True
+BP_FirstPersonCharacter_C.Character=True
+BP_FirstPersonCharacter_C.Pawn=True
+BP_FirstPersonCharacter_C.Input=True
+BP_FirstPersonCharacter_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.Sockets=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Events=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Actor=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -2105,6 +2186,25 @@ StructProperty.DefaultValueCategory=True
 /Game/BP_MoveTowardsPosBehaviorCmp.BP_MoveTowardsPosBehaviorCmp=0
 /Game/Characters/NPC/Blueprints/BP_NPC.BP_NPC=0
 /Game/Characters/NPC/Mesh/SM_NPC_Body.SM_NPC_Body=0
+/Game/Maps/Meshes/Circle003.Circle003=0
+/Game/Maps/Meshes/Cylinder011.Cylinder011=0
+/Game/Maps/Meshes/Line001.Line001=0
+/Game/Maps/Meshes/Plane002.Plane002=0
+/Game/Maps/Meshes/FbxScene_nopared.FbxScene_nopared=0
+/Game/Maps/Meshes/GeoSphere005.GeoSphere005=0
+/Game/Maps/Meshes/GeoSphere006.GeoSphere006=0
+/Game/Maps/Meshes/Circle002.Circle002=0
+/Game/Maps/Meshes/GeoSphere007.GeoSphere007=0
+/Game/Maps/Meshes/GeoSphere012.GeoSphere012=0
+/Game/Maps/Meshes/GeoSphere013.GeoSphere013=0
+/Game/Maps/Meshes/GeoSphere014.GeoSphere014=0
+/Game/Maps/Meshes/GeoSphere011.GeoSphere011=0
+/Game/Maps/Meshes/rock004.rock004=0
+/Game/Maps/Meshes/rock005.rock005=0
+/Game/Maps/Meshes/rock006.rock006=0
+/Game/Maps/Meshes/GeoSphere010.GeoSphere010=0
+/Game/Maps/Meshes/GeoSphere009.GeoSphere009=0
+/Game/Maps/Meshes/GeoSphere008.GeoSphere008=0
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
@@ -2138,8 +2238,8 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 testcharacter_C="\"Object.Actor.Tags\" "
 Character=
 Pawn=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent=
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -2164,9 +2264,9 @@ REINST_BP_GhostCharacter_C_159="\"Object.Character.Mesh.Object.Collision.BodyIns
 REINST_BP_GhostCharacter_C_163="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Actor.Tags\" "
 
 [MRU]
-MRUItem0=/Game/FirstPersonCPP/Maps/TestMapMikelPathfinding
+MRUItem0=/Game/Maps/FirstPersonExampleMap
 MRUItem1=/Game/FirstPersonCPP/Maps/TestMapMikel
-MRUItem2=/Game/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonCPP/Maps/TestMapMikelPathfinding
 MRUItem3=/Game/FirstPersonCPP/Maps/Test
 MRUItem4=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/StarterContent/Maps/Advanced_Lighting
@@ -2261,6 +2361,9 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Maps/Meshes/FbxScene_nopared.FbxScene_nopared;
+RecentlyPlaced=/Game/Maps/Meshes/Circle003.Circle003;
+RecentlyPlaced=/Game/Maps/Meshes/Cylinder011.Cylinder011;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_12
 RecentlyPlaced=/Game/BP_JamCrowdManager.BP_JamCrowdManager;
@@ -2354,5 +2457,63 @@ BaseSpecularTextureName=
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
+
+[/Script/UnrealEd.FbxSceneImportOptions]
+bCreateContentFolderHierarchy=False
+bImportAsDynamic=False
+HierarchyType=FBXSOCHT_CreateBlueprint
+bForceFrontXAxis=False
+bBakePivotInVertex=False
+bImportStaticMeshLODs=False
+bImportSkeletalMeshLODs=False
+bInvertNormalMaps=False
+
+[/Script/UnrealEd.FbxSceneImportOptionsStaticMesh]
+bAutoGenerateCollision=True
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+NormalImportMethod=FBXSceneNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+
+[/Script/UnrealEd.FbxSceneImportOptionsSkeletalMesh]
+bCreatePhysicsAsset=False
+bPreserveSmoothingGroups=False
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bImportAnimations=True
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bPreserveLocalTransform=False
+bDeleteExistingMorphTargetCurves=False
 
 
