--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Maps/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -634,11 +634,11 @@ StaticMeshEditor.TimeStamp=2018.01.25-18.25.38
 StaticMeshEditor.LastCompileMethod=External
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1480.000 Y=920.000
+WindowSize=X=1490.000 Y=930.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2820,6 +2820,18 @@ REINST_BP_GhostCharacter_C_109.Tags=True
 REINST_BP_GhostCharacter_C_109.ComponentReplication=True
 REINST_BP_GhostCharacter_C_109.Cooking=True
 REINST_BP_GhostCharacter_C_109.Events=True
+REINST_BP_GhostCharacter_C_117.Variable=True
+REINST_BP_GhostCharacter_C_117.TransformCommon=True
+REINST_BP_GhostCharacter_C_117.Sockets=True
+REINST_BP_GhostCharacter_C_117.Shape=True
+REINST_BP_GhostCharacter_C_117.Navigation=True
+REINST_BP_GhostCharacter_C_117.Rendering=True
+REINST_BP_GhostCharacter_C_117.Physics=True
+REINST_BP_GhostCharacter_C_117.Collision=True
+REINST_BP_GhostCharacter_C_117.Tags=True
+REINST_BP_GhostCharacter_C_117.ComponentReplication=True
+REINST_BP_GhostCharacter_C_117.Cooking=True
+REINST_BP_GhostCharacter_C_117.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
