New clues mode. Game Over screen added

--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1354,6 +1354,9 @@ CanvasPanel.Layout=True
 /Game/UI/Textures/Bandana.Bandana=1
 /Game/UI/Textures/Circle_Orange.Circle_Orange=1
 /Game/UI/Textures/Hat.Hat=1
+/Game/UI/Textures/T_X.T_X=1
+/Game/UI/Textures/T_GAME.T_GAME=1
+/Game/UI/Textures/T_OVER.T_OVER=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
