Y ahora se apartan

--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Characters/NPC/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -98,7 +98,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-Jam2018.TimeStamp=2018.01.27-19.05.37
+Jam2018.TimeStamp=2018.01.27-20.48.53
 Jam2018.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.01.25-18.25.31
 PakFile.LastCompileMethod=External
@@ -632,13 +632,17 @@ BlueprintGraph.TimeStamp=2018.01.25-18.25.16
 BlueprintGraph.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.01.25-18.25.38
 StaticMeshEditor.LastCompileMethod=External
+Cascade.TimeStamp=2018.01.25-18.25.16
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2018.01.25-18.25.19
+DistCurveEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1490.000 Y=930.000
+WindowSize=X=1500.000 Y=940.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2857,6 +2861,60 @@ AudioComponent.Activation=True
 AudioComponent.Cooking=True
 AudioComponent.Events=True
 K2Node_CallParentFunction.Graph=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Actor=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleSubUV.SubUV=True
+ParticleModuleSubUV.Realtime=True
+ParticleModuleSubUV.Cascade=True
+ParticleModuleRotation.Rotation=True
+ParticleModuleRotation.Cascade=True
+ParticleModuleLocationPrimitiveSphere.Location=True
+ParticleModuleLocationPrimitiveSphere.Cascade=True
+ParticleModuleSizeMultiplyLife.Size=True
+ParticleModuleSizeMultiplyLife.Cascade=True
+ParticleModuleParameterDynamic.ParticleModuleParameterDynamic=True
+ParticleModuleParameterDynamic.Cascade=True
+BP_PlayerAvoiderComponent_C.ComponentTick=True
+BP_PlayerAvoiderComponent_C.PlayerAvoiderComponent=True
+BP_PlayerAvoiderComponent_C.Tags=True
+BP_PlayerAvoiderComponent_C.ComponentReplication=True
+BP_PlayerAvoiderComponent_C.Activation=True
+BP_PlayerAvoiderComponent_C.Variable=True
+BP_PlayerAvoiderComponent_C.Cooking=True
+BP_PlayerAvoiderComponent_C.Sockets=True
+BP_PlayerAvoiderComponent_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -2884,6 +2942,9 @@ K2Node_CallParentFunction.Graph=True
 /Game/Maps/Meshes/GeoSphere009.GeoSphere009=0
 /Game/Maps/Meshes/GeoSphere008.GeoSphere008=0
 /Game/Characters/Player/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
+/Game/StarterContent/Particles/P_Smoke.P_Smoke=0
+/Game/StarterContent/Particles/P_Sparks.P_Sparks=0
+/Game/StarterContent/Particles/P_Explosion1.P_Explosion1=0
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
@@ -2915,15 +2976,15 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 TestActor_C="\"Object.Actor.Tags\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 testcharacter_C="\"Object.Actor.Tags\" "
-Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Pawn="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Character=
+Pawn=
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-BP_GhostCharacter_C="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-GhostCharacter="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BP_GhostCharacter_C=
+GhostCharacter=
 REINST_BP_GhostCharacter_C_214="\"Object.Character.CharacterMovement.Object.Tags.ComponentTags\" "
 REINST_BP_GhostCharacter_C_95="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Actor.Tags\" "
 REINST_BP_GhostCharacter_C_99="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Actor.Tags\" "
@@ -2946,11 +3007,30 @@ Jam2018Character=
 REINST_BP_GhostCharacter_C_109="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_BP_GhostCharacter_C_117="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_BP_GhostCharacter_C_68="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSize="\"Object.Size.StartSize.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSubUV="\"Object.SubUV.SubImageIndex\" \"Object.SubUV.SubImageIndex.Distribution\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[1]\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSubUVBase="\"Object.SubUV.SubImageIndex\" \"Object.SubUV.SubImageIndex.Distribution\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[1]\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleRotation="\"Object.Rotation.StartRotation.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleRotationBase="\"Object.Rotation.StartRotation.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleParameterDynamic="\"Object.ParticleModuleParameterDynamic.DynamicParams\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[0].ParamValue.Distribution\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[1].ParamValue.Distribution\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[2].ParamValue.Distribution\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[3].ParamValue.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleParameterBase="\"Object.ParticleModuleParameterDynamic.DynamicParams\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[0].ParamValue.Distribution\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[1].ParamValue.Distribution\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[2].ParamValue.Distribution\" \"Object.ParticleModuleParameterDynamic.DynamicParams.DynamicParams[3].ParamValue.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 
 [MRU]
 MRUItem0=/Game/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FirstPersonCPP/Maps/TestMapMikel
-MRUItem2=/Game/FirstPersonCPP/Maps/TestMapMikelPathfinding
+MRUItem1=/Game/FirstPersonCPP/Maps/TestMapMikelPathfinding
+MRUItem2=/Game/FirstPersonCPP/Maps/TestMapMikel
 MRUItem3=/Game/FirstPersonCPP/Maps/Test
 MRUItem4=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/StarterContent/Maps/Advanced_Lighting
@@ -3040,12 +3120,20 @@ StructProperty=BP_GhostCharacter_C.Collision.Collision,
 K2Node_VariableSet=BP_GhostCharacter_C.Collision.Collision,
 K2Node_VariableGet=
 BP_FirstPersonCharacter_C=BP_FirstPersonCharacter_C.Collision.Collision,BP_FirstPersonCharacter_C.Physics.ConstraintsGroup,
+ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
+BoolProperty=BP_GhostCharacter_C.Collision.Collision,BP_GhostCharacter_C.Physics.ConstraintsGroup,
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
+RecentlyPlaced=/Game/StarterContent/Particles/P_Explosion.P_Explosion;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Ambient_Dust.P_Ambient_Dust;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Sparks.P_Sparks;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Smoke.P_Smoke;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_11
 RecentlyPlaced=/Game/BP_JamCrowdManager.BP_JamCrowdManager;
 RecentlyPlaced=/Game/Characters/NPC/Blueprints/BP_GhostCharacter.BP_GhostCharacter;
@@ -3060,7 +3148,6 @@ RecentlyPlaced=/Game/Base/SuspectCharacteristicsGenerator.SuspectCharacteristics
 RecentlyPlaced=/Script/Jam2018.SuspectCharacteristicsGenerator;
 RecentlyPlaced=/Game/testcharacter.testcharacter;
 RecentlyPlaced=/Game/TestActor.TestActor;
-RecentlyPlaced=/Game/FirstPersonCPP/Maps/BP_AIPawnTest.BP_AIPawnTest;
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -3201,5 +3288,38 @@ bUseDefaultSampleRate=False
 bImportCustomAttribute=True
 bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
