--- a/Jam2018/Config/DefaultEngine.ini
+++ b/Jam2018/Config/DefaultEngine.ini
@@ -52,6 +52,10 @@ PathOptimizationInterval=0.500000
 SeparationDirClamp=-1.000000
 bResolveCollisions=False
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AutoExposure.Method=1
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -90,5 +94,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
